Fix visited feed link colour not being readable

--- a/site/Styles/blog/_header.scss
+++ b/site/Styles/blog/_header.scss
@@ -77,10 +77,7 @@
 
 			a {
 				margin-top: 0.6rem;
-
-				&:link {
 					color: white;
-				}
 			}
 		}
 	}
